Fix microsoft authentication with Java 16, 17 etc...
* by removing the url stream factory handler hack

* and then patching the input stream when we process the response